Bug #17793 Scheduler uses class event_timed should be Event_timed
Submitted: 28 Feb 2006 16:43 Modified: 28 Feb 2006 20:25
Reporter: Andrey Hristov Email Updates:
Status: Closed
Category:Server: SP Severity:S3 (Non-critical)
Version:5.1.8-debug OS:Linux (SuSE 9.3)
Assigned to: Andrey Hristov Target Version:

[28 Feb 2006 16:43] Andrey Hristov
Description:
This is needed to cleanup the code a bit.

How to repeat:
See the code
[28 Feb 2006 17:36] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/3255
[28 Feb 2006 20:25] Andrey Hristov
Nothing to document. Internals.