class event_timed -> Event_timed fix for bug#17793 (Scheduler uses class event_timed should be Event_timed)